[package]
name = "simple-redis"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
bytes = "1.11.0"
dashmap = "6.1.0"
enum_derive = "0.1.7"
enum_dispatch = "0.3.13"
lazy_static = "1.5.0"
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["macros", "net", "rt", "rt-multi-thread"] }
tokio-util = { version = "0.7.17", features = ["codec"] }
tracing = "0.1.43"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
